--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "body-parser": "^1.16.0",
     "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-slider": "^9.7.2",
+    "bootstrap-slider": "^9.10.0",
     "clone": "^2.1.0",
     "cookie-parser": "^1.4.3",
     "csv2json": "^1.2.0",
@@ -33,6 +33,7 @@
     "fast-csv": "^2.3.1",
     "huebee": "^1.0.1",
     "jQuery": "^1.7.4",
+    "konva": "^2.1.7",
     "multer": "^1.3.0",
     "sweetalert": "^2.1.0",
     "tracer": "^0.8.7"
